<resources>
    <string name="app_name" translatable="false">WPOSSBANK</string>

    <!--Generales-->
    <string name="front_subheader_text">soluciones modernas</string>
    <string name="main_welcome_message">Hola %1$s, </string>

    <string name="confirm">Confirmar</string>
    <string name="credit_card_sell">Venta con tarjeta</string>
    <string name="money_withdrawal">Retiro</string>
    <string name="money_deposit">Deposito</string>
    <string name="money_transfer">Transferencia</string>
    <string name="show_account_balance">Consulta de Saldo</string>
    <string name="make_new_account">Creación de cuenta</string>

    <!--Botones-->
    <!--Botones generales-->
    <string name="button_enter">Entrar</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_go_back">Regresar</string>
    <string name="button_confirm">Confirmar</string>

    <!--Menu principal-->
    <string name="button_log_in">Iniciar Sesión</string>
    <string name="button_new_user">Nuevo Usuario</string>
    <string name="button_admin">Administrador</string>

    <!--♦Menú general-->
    <string name="button_card_payments">Pagos con Tarjeta</string>
    <string name="button_withdrawals">Retirar Dinero</string>
    <string name="button_deposits">Depositar Dinero</string>
    <string name="button_transfers">Transferir Dinero</string>
    <string name="button_balance">Consultar Saldo</string>
    <string name="button_history">Ver Movimientos</string>
    <string name="button_log_out">Cerrar Sesion</string>

    <!--Campos de texto-->
    <!--Admin-->
    <string name="email">Correo Electronico</string>
    <string name="input_email">Ingrese el correo electronico</string>

    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="input_password">********</string>

    <!--Logeo y registrarse-->
    <string name="account">Número de Cedula de la Cuenta</string>
    <string name="input_account">Ingrese el número de cedula la cuenta</string>

    <string name="name">Nombre</string>
    <string name="input_name">Ingrese su nombre</string>

    <string name="lastname">Apellidos</string>
    <string name="input_lastname">Ingrese sus apellidos</string>

    <string name="cc">Número de Cedula</string>
    <string name="input_cc">Ingrese su número de cedula</string>

    <string name="pin">PIN</string>
    <string name="pin_confirm">Confirmar PIN</string>
    <string name="input_pin">****</string>

    <string name="balance">Saldo Inicial</string>
    <string name="input_balance">Ingrese el saldo inicial</string>

    <!--Pago con tarjeta-->
    <string name="card_number">Número de Tarjeta de Credito</string>
    <string name="input_card_number">Ingrese el número de la tarjeta</string>

    <string name="input_exp_date">Ingrese la fecha de expiración de la tarjeta</string>

    <string name="ccv">CCV</string>
    <string name="input_ccv">Ingrese el CCV de la tarjeta</string>

    <string name="payment_amount">Valor a Pagar</string>
    <string name="input_payment_amount">Ingrese el valor a pagar</string>

    <string name="dues">Número de Cuotas</string>
    <string name="input_dues">Ingrese el número de cuotas</string>

    <!--Retiro de dinero-->
    <string name="input_withdrawal_amount">Monto a Retirar</string>

    <!--Depositar dinero-->
    <string name="deposit_amount">Monto a Depositar</string>
    <string name="input_deposit_amount">Ingrese la cantidad a depositar</string>

    <!--Transferir dinero-->
    <string name="transfer_account">Número de Cedula de la Transferencia</string>
    <string name="input_transfer_account">Ingrese el número de cedula de la transferencía</string>

    <string name="transfer_amount">Monto a Transferir</string>
    <string name="input_transfer_amount1">Ingrese la cantidad a transferir</string>


    <!--Dialogos-->
    <!--Dialogos generales-->
    <string name="dialog_success">TRANSACCIÓN EXITOSA</string>
    <string name="dialog_fail">TRANSACCIÓN RECHAZADA</string>

        <!--Panel del Administrador-->
    <string name="dialog_confirm_update_admin">¿Esta seguro que desea actualizar los datos del corresponsal?</string>

    <!--Pago con tarjeta-->
    <string name="dialog_confirm_cardpayment">Estimado: /¿Desea realizar el pago a WPOSS por un valor de $/ a / cuotas?/Número de tarjeta: </string>

    <!--Retiros-->
    <string name="dialog_confirm_withdrawal">Estimado: /¿Desea retirar $/ con un coste de uso de $2.000?</string>

    <!--Depositos-->
    <string name="dialog_confirm_deposit">Estimado Usuario /¿Desea depositar $/ en la cuenta de / con un coste de uso de $1.000?</string>
    <string name="dialog_confirm_admin_deposit">Estimado Usuario /¿Desea depositar $/ en el corresponsal?</string>

    <!--Transferencias-->
    <string name="dialog_confirm_transfer">Estimado: /¿Desea transferir $/ a la cuenta de / con un coste de uso de $1.000?</string>

    <!--Consultar Saldo-->
    <string name="dialog_confirm_get_balance">Estimado: /Esta accion tendra un coste de $1.000 /¿Desea continuar?</string>


    <!--Toasts-->
    <!--Toasts de base de datos-->
    <string name="toast_make_user_success">"¡Se ha creada la cuenta con exito!"</string>

    <!--Mensajes de error-->
    <!--Errores generales-->
    <string name="error_invalid">Invalido.</string>
    <string name="error_wrong">Incorrecto.</string>
    <string name="error_invalid_input">Hay un campo con valores invalidos.</string>

    <!--Base de datos-->
    <string name="error_already_registered">Ya se encuentra registrado.</string>
    <string name="error_not_registered">No se encuentra registrado.</string>
    <string name="error_default_admin">Se produjo un error al crear la informacion por defecto del corresponsal.</string>
    <string name="error_make_user">Se produjo un error al crear la cuenta.</string>
    <string name="error_fetch_data">Error al cargar información desde la base de datos.</string>
    <string name="error_write_data">Error al escribir información en la base de datos.</string>

    <!---Campos de input-->
    <string name="error_empty">No puede estar vacio.</string>
    <string name="error_spaces">No puede contener espacios.</string>
    <string name="error_only_caps">Solo puede contener letras mayusculas.</string>
    <string name="error_atleast_cap">Al menos una letra mayuscula.</string>
    <string name="error_atleast_letter">Al menos una letra minuscula.</string>
    <string name="error_only_numbers">Solo puede contener numeros.</string>
    <string name="error_atleast_number">Al menos un numero.</string>
    <string name="error_atleast_special">Al menos un caracter especial.</string>
    <string name="error_enough_funds">Fondos insuficientes.</string>
    <string name="error_mustbe_4">Debe ser de cuatro caracteres.</string>
    <string name="error_atleast_8">Debe contener almenos ocho caracteres.</string>
    <string name="error_between_15and16">Debe contener entre quince y dieciseis caracteres.</string>
    <string name="error_between_2and7">Debe contener entre dos y siete caracteres.</string>



    <string name="admin_panel">Panel del Administrador</string>
    <string name="hello_admin">Hola ADMIN,</string>
    <string name="admin_balance_is" >El balance del corresponsal es </string>
    <string name="update">Actualizar</string>
    <string name="update_admin_data">ACTUALIZAR DATOS DE ADMINISTRADOR</string>
    <string name="button_add_money">Añadir Dinero</string>
    <string name="log_in">Iniciar Sesion</string>
    <string name="select_an_option">Eliga una opción</string>
    <string name="deposit">Depositar</string>
    <string name="money_in_the_account">Dinero en la cuenta</string>
    <string name="withdraw">Retirar</string>
    <string name="money_from_the_account">Dinero de la cuenta</string>
    <string name="withdrawal_amount">Monto a Retirar</string>
    <string name="transfer">Transferir</string>
    <string name="money_to_another_account">Dinero a otra cuenta</string>
    <string name="see_balance">Consultar</string>
    <string name="balance_of_the_account">Saldo de la cuenta</string>
    <string name="date">FECHA</string>
    <string name="type">TIPO</string>
    <string name="value">VALOR</string>
    <string name="transfers_history">Historial</string>
    <string name="your_balance_is">Su saldo es</string>
    <string name="balance_history">HISTORIAL DE TRANSACCIONES</string>
    <string name="deposit_money">Depositar Dinero</string>
    <string name="transfers_of_the_account">Movimientos de la cuenta</string>
    <string name="card_payment">Credito</string>
    <string name="pay_with_a_credit_card">Pagar con una tarjeta</string>
    <string name="exp_date">Fecha de Expiración</string>
    <string name="make_new_user">Nuevo</string>
    <string name="user_of_bank">Usuario del Banco</string>
</resources>