<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_register_bg"
    tools:context=".NewUserActivity"
    android:padding="30dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alef"
        android:text="@string/app_name"
        android:textColor="@color/purple_text_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans"
            android:text="@string/button_new_user"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/input_white"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_light"
        android:hint="@string/input_name"
        android:inputType="textCapCharacters"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/purple_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/lastname"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastnameInput"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/lastnameInput"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/input_white"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_light"
        android:hint="@string/input_lastname"
        android:inputType="textCapCharacters"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/purple_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/cc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/ccInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/input_white"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_light"
        android:hint="@string/input_cc"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/purple_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/pin"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/ccInput" />

    <EditText
        android:id="@+id/pinInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/input_white"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_light"
        android:hint="@string/input_pin"
        android:inputType="numberPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/purple_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/pin_confirm"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/pinInput" />

    <EditText
        android:id="@+id/pinConfirmInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/input_white"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_light"
        android:hint="@string/input_pin"
        android:inputType="numberPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/purple_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/balance"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/pinConfirmInput" />

    <EditText
        android:id="@+id/balanceInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/input_white"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_light"
        android:hint="@string/input_balance"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/purple_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/purple_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_new_user"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balanceInput"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>