<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_front_bg"
    android:padding="30dp"
    tools:context=".WelcomeScreenActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alef"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/purple_text_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/front_subheader_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/purple_button"
        android:fontFamily="@font/alegreya_sans_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_log_in"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/newUserButton"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dark_purple_button"
        android:backgroundTintMode="src_in"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/button_new_user"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/light_purple_button"
        android:fontFamily="@font/alegreya_sans_bold"
        android:foregroundTintMode="src_atop"
        android:text="@string/button_admin"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserButton"
        app:layout_constraintVertical_bias="0.63" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>